# Gesture-classification

./: .gitignore  README.md  environment.yml
executables/: GestureApp.iobj  GestureApp.ipdb  GestureApp.vcxproj.FileListAbsolute.txt  gestureLeapConfig.json  model_training.py
executables/Dataset/0/: 0.txt  100.txt  102.txt  103.txt  104.txt  106.txt  107.txt  108.txt  112.txt  113.txt  116.txt  117.txt  118.txt  119.txt  121.txt  125.txt  127.txt  128.txt  131.txt  132.txt  136.txt  14.txt  142.txt  145.txt  147.txt  149.txt  150.txt  (+89 more)
executables/GestureApp.tlog/: GestureApp.write.1u.tlog  link.command.1.tlog  link.write.1.tlog
src/: SplitStaticGestures.ipynb  model_training.ipynb  model_training.py
src/.ipynb_checkpoints/: model_training-checkpoint.ipynb  model_training_backup-checkpoint.ipynb
src/DataSampler/: DataSampler.sln
src/GestureApp/: GestureApp.cpp  GestureApp.sln  GestureApp.vcxproj  GestureApp.vcxproj.filters  GestureClassificationThesis.sln  GestureDemoApp.cpp  gestureLeapConfig.json  packages.config
src/TrainingScript/: gestureLeapConfig.json  model_training.ipynb  model_training.py
src/app/: CMakeLists.txt  CMakeSettings.json  main.cpp
src/app/LSTM_model/: saved_model.pb
src/app/include/cppflow/: model.h
src/app/model/: CModelWrapper.cpp  CModelWrapper.h  saved_model.pb
text/: FITthesis.cls  __latexindent_temp.tex  main.bbl  main.blg  main.lof  main.lot  main.tex  main.toc  mybibliographyfile.bib
text/chapters/: analysis.tex  conclusion.tex  experiments.tex  implementation.tex  introduction.tex  multileap.tex  neural_network.tex
(+9360 files in other folders)
